# QuickCrop

./: .gitignore  LICENSE  README.md  build.py  main.py  pyproject.toml
core/: image_cache.py  image_loader.py  paths.py  processor.py
resources/: icons.ai
scripts/: generate_icons.py
styles/: macos.qss  windows.qss
ui/: camera_roll.py  canvas.py  image_info_loader.py  image_list.py  image_loader_worker.py  main_window.py  processing_dialog.py  thumbnail_loader.py
